--- a/src/components/Header/components/search/index.module.less
+++ b/src/components/Header/components/search/index.module.less
@@ -6,9 +6,20 @@
 }
 
 .search_article{
+    border: 1px solid #fff;
+    margin-top: 3%;
+    padding: 1%;
+    border-radius: 6px;
+    max-height: 300px;
+    overflow-y: auto;
 
     .article_title{
-        
+        padding: 1%;
+        cursor: pointer;
+    }
+
+    .article_title:hover{
+        background-color: rgba(255, 255, 255, 0.5);
     }
 }
 
