--- a/src/components/Header/index.module.less
+++ b/src/components/Header/index.module.less
@@ -4,7 +4,8 @@
     padding: 1% 1%;
     z-index: 1000;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(4px);
     -webkit-animation: headerPinnedSlideDown .5s;
     animation: headerPinnedSlideDown .5s;
     -webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0,.1);
@@ -12,7 +13,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    color: #fff;
 
     .logo{
         cursor: pointer;
