--- a/src/global.module.less
+++ b/src/global.module.less
@@ -14,6 +14,6 @@ body{
     background: url("@/assets/image/wallhaven-x6zomd.png") no-repeat;
     height:100%;
     width:100%;
-    overflow: hidden;
-    background-size:cover;
+    background-attachment: fixed;
 }
+
