--- a/src/components/About_Cord/index.module.less
+++ b/src/components/About_Cord/index.module.less
@@ -1,12 +1,38 @@
 .about_cord{
+    background-color: rgba(255, 255, 255, 0.5);
+    color: #000;
+    backdrop-filter: blur(4px);
+    box-shadow: 0 3px 12px -1px rgba(7,10,25,.1), 0 22px 27px -30px rgba(7,10,25,.1);
+    padding: 3%;
+    margin-bottom: 3%;
 
-    .cord_title{
-        font-size: 1.7rem;
-        color: #fff;
+    .cord_image{
+        display: flex;
+        justify-content: center;
+        img{
+            height: 10rem;
+            width: 10rem;
+            border-radius: 50%;
+        }
+    }
 
+    .title{
+        text-align: center;
+        font-size: 2.5rem;
+        margin: 3% 0;
+        color: #FF4B5F;
         span{
-            color: #FF4B60;
-            margin-left: 2%;
+            color: #4A4870;
+        }
+    }
+
+    .icons{
+        display: flex;
+        justify-content: space-around;
+        font-size: 3rem;
+        
+        svg{
+            cursor: pointer;
         }
     }
 }
