--- a/src/global.module.less
+++ b/src/global.module.less
@@ -15,5 +15,8 @@ body{
     height:100%;
     width:100%;
     background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
