--- a/src/components/About_Cord/index.module.less
+++ b/src/components/About_Cord/index.module.less
@@ -30,9 +30,22 @@
         display: flex;
         justify-content: space-around;
         font-size: 3rem;
+        align-items: center;
+        margin: 4% 0;
         
         svg{
             cursor: pointer;
+        }
+    }
+
+    .text{
+        display: flex;
+        justify-content: space-around;
+        font-size: 1.1rem;
+        
+
+        span{
+            color: #FF4B5F;
         }
     }
 }
