--- a/src/components/Header/index.module.less
+++ b/src/components/Header/index.module.less
@@ -8,8 +8,8 @@
     backdrop-filter: blur(4px);
     -webkit-animation: headerPinnedSlideDown .5s;
     animation: headerPinnedSlideDown .5s;
-    -webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0,.1);
-    box-shadow: 0px 1px 10px 0px rgba(0,0,0,.1);
+    -webkit-box-shadow: 0 1px 10px 0 rgba(0,0,0,.1);
+    box-shadow: 0 1px 10px 0 rgba(0,0,0,.1);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -63,6 +63,4 @@
             transform: translateY(-5px);
         }
     }
-
-    
 }
