--- a/src/components/Music_Player/index.module.less
+++ b/src/components/Music_Player/index.module.less
@@ -1,3 +1,46 @@
 .music_player{
+  background-color: rgba(255, 255, 255, 0.7);
+  color: #000;
+  backdrop-filter: blur(4px);
+  box-shadow: 0 3px 12px -1px rgba(7,10,25,.1), 0 22px 27px -30px rgba(7,10,25,.1);
+  padding: 3%;
+  margin-bottom: 3%;
 
+  .music_title{
+    color: #FF4B60;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    svg{
+      margin-right: 15px;
+      font-size: 2rem;
+      animation: swing 2s ease-in-out infinite;
+      animation-delay: 2s;
+    }
+    @keyframes swing {
+      0% {
+        transform: rotate(0deg);
+      }
+      25% {
+        transform: rotate(15deg);
+      }
+      50% {
+        transform: rotate(-10deg);
+      }
+      75% {
+        transform: rotate(5deg);
+      }
+      100% {
+        transform: rotate(0deg);
+      }
+    }
+  }
+
+  .notice{
+    margin-top: 5%;
+    background: rgba(167,121,88,0.2);
+    border-radius: 10px;
+    padding: 10px 0;
+    font-size: 1.2rem;
+  }
 }
