--- a/src/pages/Home/components/Cord/index.module.less
+++ b/src/pages/Home/components/Cord/index.module.less
@@ -70,28 +70,27 @@
                 -webkit-line-clamp: 2;
                 overflow: hidden;
                 text-overflow: ellipsis;
-                // position: relative;
-            }
 
-            // .title_text::before {
-            //     content: '';
-            //     position: absolute;
-            //     bottom: 0;
-            //     left: 0;
-            //     right: 0;
-            //     height: 2px;
-            //     background-color: #3cefff;
-            //     transform-origin: bottom right;
-            //     transform: scaleX(0);
-            //     transition: transform 0.5s ease;
-            // }
+                span{
+                    position: relative;
+                }
+                span::before {
+                    content: '';
+                    position: absolute;
+                    left: 50%;
+                    bottom: 0;
+                    top: 100%;
+                    width: 100%;
+                    height: 4px;
+                    background-color: #FF4B60;
+                    transform-origin: center;
+                    transform: translate(-50%, 0) scaleX(0);
+                    transition: transform 1s ease-in-out;
+                }
 
-            .title_text:hover{
-                text-decoration: underline;
-                text-decoration-color: #FF4B60; // 下划线颜色
-                text-decoration-thickness: 3px; // 下划线粗细 
-                // transform-origin: bottom left;
-                // transform: scaleX(1);
+                span:hover::before {
+                    transform: translate(-50%, 0) scaleX(1);
+                }
             }
 
             .title_time{
