--- a/src/pages/Home/index.module.less
+++ b/src/pages/Home/index.module.less
@@ -39,6 +39,21 @@
             font-size: 2.5rem;
             font-weight: bold;
             margin-bottom: 20%;
+
+            .flagstaff{
+                animation: blink 1s infinite;
+            }
+            @keyframes blink {
+                50% {
+                    opacity: 0;
+                }
+            }
+        }
+
+        .demonstrate_text:hover{
+            color: #FF4B60;
+            text-shadow: 4px 4px 6px #4bf3ff;
+            animation: shadow-blink 1s infinite;
         }
 
         .demonstrate_icon{
