--- a/src/pages/Home/components/Cord/index.module.less
+++ b/src/pages/Home/components/Cord/index.module.less
@@ -148,7 +148,11 @@
             background: #fff;
             cursor: pointer;
             transition: all .4s ease;
-            box-shadow: 0px 2px 6px rgba(7,10,25,.1);
+            box-shadow: 0 2px 6px rgba(7, 10, 25, .1);
+
+            span {
+                color: #ec8397;
+            }
         }
 
         .tab_item:hover{
